--- a/shiny_app/www/css/contributors.css
+++ b/shiny_app/www/css/contributors.css
@@ -1,5 +1,6 @@
 .collapsed {
-  background-color: #777;
+  /*background-color: #777;*/
+  background-color: #A5C581;
   color: white;
   cursor: pointer;
   padding: 18px;
@@ -11,7 +12,8 @@
 }
 
 .collapsed:hover {
-  background-color: #555;
+  /*background-color: #555;*/
+  background-color: #9CBF73;
 }
 
 .content {
