debugged jumpy initiating contributor css

--- a/shiny_app/www/css/contributors.css
+++ b/shiny_app/www/css/contributors.css
@@ -4,20 +4,21 @@
   margin: 2% 5% 2% 5%;
 }
 
+#citationsAll {
+  width: 65%;
+}
+
 .contrCol {
-  flex: 65%;
   padding: 20px;
 }
 
 .teamCol {
-  flex: 35%;
   overflow: hidden;
 }
 
-.tabContent {
-  float: right;
+#authorsCol {
+  width: 35%;
 }
-
 
 
 
